<resources>
    <string name="app_name">EveryWhere</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_more_service">您好，为了获取更好的服务</string>
    <string name="login_app">请登录到处旅行</string>
    <string name="contry_code">+86</string>
    <string name="input_phone">请输入手机号</string>
    <string name="send_verify">发送验证码</string>
    <string name="or">or</string>
    <string name="agree_protocol">登录或注册即同意到处旅行用户协议</string>
    <string name="send_again">重新发送</string>
    <string name="input_verify">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="message">消息</string>
    <string name="verify_code">验证码:</string>
    <string name="header_name">不想要的过去S</string>
    <string name="header_set">编辑</string>
    <string name="my_money">我的钱包</string>
    <string name="txt_money">99</string>
    <string name="txt_yuan">元</string>
    <string name="txt_code">赢取奖金>></string>
    <string name="txt_code2"><![CDATA[>>]]></string>
    <string name="my_kaquan">我的卡券</string>
    <string name="my_yigou">已购行程</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_guanzhu">我的关注</string>
    <string name="my_kefu">联系客服</string>
    <string name="my_yijian">意见反馈</string>
    <string name="my_banben">版本检测</string>
    <string name="header_miaoshu">四肢不全五行缺勤</string>
    <string name="txt_tool_mine">个人信息</string>
    <string name="user_name">用户昵称</string>
    <string name="txt_sex">男</string>
    <string name="sex">性别</string>
    <string name="txt_qianming">个性签名</string>
    <string name="setpsw">修改密码</string>
    <string name="set_bind">绑定手机</string>
    <string name="btn_exit">退出登录</string>
    <string name="my_photo">头像</string>
    <string name="camera_pop_camera">拍照</string>
    <string name="camera_pop_album">从手机相册选择</string>
    <string name="camera_pop_cancel">取消</string>
    <string name="man">男</string>
    <string name="lady">女</string>
    <string name="sex_U">保密</string>
    <string name="txt_tool_finish">完成</string>
    <string name="guide_route">严选当地人的私藏线路</string>
    <string name="guide_music">智能语音实时导览</string>
    <string name="guide_map">智能地图为你指路</string>
    <string name="txt_tool_head">个人头像</string>
    <string name="share">分享</string>
    <string name="collects">收藏</string>
    <string name="Okcollects">已收藏</string>
    <string name="cost">开始线路</string>
    <string name="details">查看全部评价</string>
    <string name="check_route">预选线路</string>
    <string name="price">¥30.00</string>
    <string name="txt_banmi_detal">伴米详情</string>
    <string name="txt_tool_trip">旅行专题</string>
    <string name="txt_tool_discuss">全部评价</string>
</resources>
