<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.main.activity.MineActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/txt_tool_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_tool_mine"
            android:textSize="@dimen/sp_16" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_4"
        android:background="@drawable/gra_white_de" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_18"
        android:text="获取途径"
        android:textSize="@dimen/dp_12" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_212"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_21"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/txt_mine_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/my_kaquan"
                    android:textSize="@dimen/sp_14" />


                <ImageView
                    android:id="@+id/img_kaquan"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_12"
                    android:src="@drawable/icon_me_kaquan_banmi1" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/dedede"></View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/txt_mine_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/user_name"
                    android:textSize="@dimen/sp_14" />


                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/header_name"
                    android:textColor="@color/c_a9a9a9"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/dedede"></View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/txt_mine_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/sex"
                    android:textSize="@dimen/sp_14" />


                <TextView
                    android:id="@+id/txt_user_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/txt_sex"
                    android:textColor="@color/c_a9a9a9"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/dedede"></View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/txt_mine_qianming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/txt_qianming"
                    android:textSize="@dimen/sp_14" />


                <TextView
                    android:id="@+id/txt_user_qianming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/header_miaoshu"
                    android:textColor="@color/c_a9a9a9"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/dedede"></View>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_111"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_111"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_mine_setpsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/setpsw"
                android:textSize="@dimen/sp_14" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@id/txt_mine_setpsw"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/dedede"></View>

            <TextView
                android:id="@+id/txt_mine_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_mine_setpsw"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/set_bind"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@drawable/shape3"
        android:text="@string/btn_exit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />
</LinearLayout>