<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_5"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_man"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/shape4"
            android:text="@string/man"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/txt_mine_setpsw"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_marginRight="@dimen/dp_3"
            android:background="@color/dedede"></View>

        <Button
            android:id="@+id/btn_lady"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/shape4"
            android:text="@string/lady"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@id/txt_mine_setpsw"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_marginRight="@dimen/dp_3"
            android:background="@color/dedede"></View>

        <Button
            android:id="@+id/btn_sexU"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/shape4"
            android:text="@string/sex_U"
            android:textColor="@color/color_blue"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>