<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.guideactivity.GuideActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>


    <TextView
        android:id="@+id/guide_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/guide_route"
        android:textSize="@dimen/dp_30"
        android:visibility="visible" />


    <TextView
        android:id="@+id/guide_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/guide_music"
        android:textSize="@dimen/dp_30"
        android:visibility="gone" />

    <TextView
        android:id="@+id/guide_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/guide_map"
        android:textSize="@dimen/dp_30"
        android:visibility="gone" />

    <com.example.nice.everywhere.ui.main.guideactivity.guidepreviewIndicator.PreviewIndicator
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:id="@+id/parentPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></com.example.nice.everywhere.ui.main.guideactivity.guidepreviewIndicator.PreviewIndicator>

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/dp_105"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/shape5"
        android:text="立即体验"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        android:visibility="gone" />
</RelativeLayout>